<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Oldfriends</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="add_friends">添加好友</string>
    <string name="add_new_charge">新建群帐</string>
    <string name="charge_account">结算</string>
    <string name="charge_add_with_friends">共建群账</string>
    <string name="charge_average">分账</string>
    <string name="charge_create">共建群账</string>
    <string name="charge_detail">账单明细</string>
    <string name="charge_search">查账</string>
    <string name="charge_setting">群账设置</string>
    <string name="choose_charge_number_hint">请选择需要结算的成员</string>
    <string name="choose_country">选择国家地区</string>
    <string name="choose_group_charge_friends">选择群账好友</string>
    <string name="common_back">返回</string>
    <string name="common_cancel">取消</string>
    <string name="common_edit">编辑</string>
    <string name="common_finish">完成</string>
    <string name="common_image_description">图片描述</string>
    <string name="common_submit">确认</string>
    <string name="contact_friends">通讯录好友</string>
    <string name="empty" />
    <string name="fragment_user_attention">关注</string>
    <string name="fragment_user_collection">收藏</string>
    <string name="fragment_user_fans">粉丝</string>
    <string name="fragment_user_share">分享</string>
    <string name="friends">好友</string>
    <string name="friends_share">Ta的分享</string>
    <string name="group_charge">群账</string>
    <string name="main_exit">再按一次退出程序</string>
    <string name="pay">支付</string>
    <string name="photo">相册</string>
    <string name="qr_code">二维码</string>
    <string name="scan">扫一扫</string>
    <string name="scan_text">将二维码放入框内,自动识别</string>
    <string name="search">搜索</string>
    <string name="search_hint">请输入搜索内容...</string>
</resources>
