<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@color/common_top_color"
        android:layout_width="fill_parent"
        android:layout_height="45.0dip">

    <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/capture_left_layout"
            android:paddingLeft="8.0dip"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">

        <ImageView
                android:id="@+id/capture_left_btn"
                android:background="@drawable/back_icon"
                android:layout_width="10.0dip"
                android:layout_height="18.0dip"/>

        <TextView
                android:textSize="18.0sp"
                android:textColor="@color/common_font_color"
                android:id="@+id/capture_left_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4.0dip"
                android:text="@string/group_charge"/>

    </LinearLayout>

    <TextView
            android:textSize="18.0sp"
            android:textColor="#ff000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qr_code"
            android:layout_centerInParent="true"/>

    <RelativeLayout
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:id="@+id/capture_right_layout"
            android:layout_width="45.0dip"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true">

        <TextView
                android:textSize="18.0sp"
                android:textColor="@color/common_font_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo"/>

    </RelativeLayout>
</RelativeLayout>