<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
              xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@drawable/charge_detail_top_bg" android:layout_width="wrap_content"
                    android:layout_height="180.0dip">
        <include android:id="@+id/fragment_user_top" layout="@layout/common_transpant_top_layout"/>
        <ImageView android:id="@+id/fragment_user_headImage" android:background="@drawable/charge_detail_user_image"
                   android:layout_width="82.0dip" android:layout_height="82.0dip" android:layout_marginTop="10.0dip"
                   android:layout_below="@id/fragment_user_top" android:layout_centerHorizontal="true"/>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="wrap_content"
                      android:layout_height="wrap_content" android:layout_marginTop="10.0dip"
                      android:layout_below="@+id/fragment_user_headImage" android:layout_centerHorizontal="true">
            <TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:layout_width="wrap_content"
                      android:layout_height="wrap_content" android:text="用户名:"/>
            <TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:layout_width="wrap_content"
                      android:layout_height="wrap_content" android:text="Pancake.C"/>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:background="#ffffffff" android:layout_width="fill_parent"
                  android:layout_height="wrap_content" android:weightSum="4.0">
        <LinearLayout android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content"
                      android:layout_weight="1.0">
            <TextView android:id="@+id/fragment_user_fans" android:text="@string/fragment_user_fans"
                      style="@style/User_subTitle"/>
            <TextView android:textSize="14.0sp" android:textColor="@color/common_subtitle_click_selector"
                      android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_marginLeft="4.0dip" android:text="21"/>
        </LinearLayout>
        <TextView android:background="#ffcccccc" android:layout_width="1.0dip" android:layout_height="22.0dip"
                  android:layout_marginTop="7.0dip"/>
        <LinearLayout android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content"
                      android:layout_weight="1.0">
            <TextView android:id="@+id/fragment_user_attention" android:text="@string/fragment_user_attention"
                      style="@style/User_subTitle"/>
            <TextView android:textSize="14.0sp" android:textColor="@color/common_subtitle_click_selector"
                      android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_marginLeft="4.0dip" android:text="56"/>
        </LinearLayout>
        <TextView android:background="#ffcccccc" android:layout_width="1.0dip" android:layout_height="22.0dip"
                  android:layout_marginTop="7.0dip"/>
        <LinearLayout android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content"
                      android:layout_weight="1.0">
            <TextView android:id="@+id/fragment_user_collection" android:text="@string/fragment_user_collection"
                      style="@style/User_subTitle"/>
            <TextView android:textSize="14.0sp" android:textColor="@color/common_subtitle_click_selector"
                      android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_marginLeft="4.0dip" android:text="1"/>
        </LinearLayout>
        <TextView android:background="#ffcccccc" android:layout_width="1.0dip" android:layout_height="22.0dip"
                  android:layout_marginTop="7.0dip"/>
        <LinearLayout android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content"
                      android:layout_weight="1.0">
            <TextView android:id="@+id/fragment_user_share" android:text="@string/fragment_user_share"
                      style="@style/User_subTitle"/>
            <TextView android:textSize="16.0sp" android:textColor="@color/common_subtitle_click_selector"
                      android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_marginLeft="4.0dip" android:text="1"/>
        </LinearLayout>
        <TextView android:background="#ffcccccc" android:layout_width="1.0dip" android:layout_height="22.0dip"
                  android:layout_marginTop="7.0dip"/>
    </LinearLayout>
    <TextView android:background="#ffcccccc" android:layout_width="fill_parent" android:layout_height="0.5dip"/>
    <ScrollView android:background="@color/white" android:scrollbars="none" android:layout_width="fill_parent"
                android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent"
                      android:layout_height="wrap_content">
            <include layout="@layout/custom_split_line_layout"/>
            <RelativeLayout android:gravity="center" android:background="@color/white" android:paddingLeft="12.0dip"
                            android:paddingTop="8.0dip" android:paddingRight="10.0dip" android:paddingBottom="8.0dip"
                            android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="16.0sp" android:textColor="@color/black" android:layout_width="wrap_content"
                          android:layout_height="wrap_content" android:text="我的收款提醒"
                          android:layout_centerVertical="true"/>
                <ImageView android:id="@+id/user_setting_getMoney_enter" android:background="@drawable/enter_icon"
                           android:layout_width="wrap_content" android:layout_height="wrap_content"
                           android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
                <ImageView android:background="@drawable/charge_detail_user_image" android:layout_width="40.0dip"
                           android:layout_height="40.0dip" android:layout_marginRight="4.0dip"
                           android:layout_toLeftOf="@id/user_setting_getMoney_enter"/>
            </RelativeLayout>
            <include layout="@layout/custom_split_line_layout"/>
            <RelativeLayout android:background="@color/white" android:paddingLeft="12.0dip" android:paddingTop="8.0dip"
                            android:paddingRight="10.0dip" android:paddingBottom="8.0dip"
                            android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:id="@+id/fragment_user_bind_weixin_image" android:background="@drawable/weixin_icon"
                           android:layout_width="40.0dip" android:layout_height="40.0dip"/>
                <LinearLayout android:orientation="vertical" android:layout_width="wrap_content"
                              android:layout_height="fill_parent" android:layout_marginLeft="5.0dip"
                              android:layout_toRightOf="@id/fragment_user_bind_weixin_image"
                              android:layout_centerVertical="true">
                    <TextView android:textSize="16.0sp" android:textColor="@color/black"
                              android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:text="绑定微信账号"/>
                    <TextView android:textSize="14.0sp" android:textColor="@color/common_font_color"
                              android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:text="通过微信账号接受消息"/>
                </LinearLayout>
                <ImageView android:background="@drawable/enter_icon" android:layout_width="wrap_content"
                           android:layout_height="wrap_content" android:layout_alignParentRight="true"
                           android:layout_centerVertical="true"/>
            </RelativeLayout>
            <include layout="@layout/custom_split_line_layout"/>
            <RelativeLayout android:gravity="center" android:id="@+id/notice_setting_layout"
                            android:background="@drawable/common_list_click_selector" android:paddingLeft="12.0dip"
                            android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip"
                            android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="16.0sp" android:textColor="@color/black" android:layout_width="wrap_content"
                          android:layout_height="wrap_content" android:text="通知设置"
                          android:layout_centerVertical="true"/>
                <ImageView android:background="@drawable/enter_icon" android:layout_width="wrap_content"
                           android:layout_height="wrap_content" android:layout_alignParentRight="true"
                           android:layout_centerVertical="true"/>
            </RelativeLayout>
            <include layout="@layout/custom_split_line_layout"/>
            <LinearLayout android:orientation="vertical" android:background="#ffffffff" android:paddingLeft="12.0dip"
                          android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RelativeLayout android:gravity="center" android:paddingTop="10.0dip" android:paddingRight="10.0dip"
                                android:paddingBottom="10.0dip" android:layout_width="fill_parent"
                                android:layout_height="wrap_content">
                    <TextView android:textSize="16.0sp" android:textColor="@color/black"
                              android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:text="联系我们" android:layout_centerVertical="true"/>
                    <ImageView android:id="@+id/user_setting_contact_enter" android:background="@drawable/enter_icon"
                               android:layout_width="wrap_content" android:layout_height="wrap_content"
                               android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
                </RelativeLayout>
                <TextView android:background="@color/common_line_color" android:layout_width="fill_parent"
                          android:layout_height="1.0dip"/>
                <RelativeLayout android:gravity="center" android:paddingTop="10.0dip" android:paddingRight="10.0dip"
                                android:paddingBottom="10.0dip" android:layout_width="fill_parent"
                                android:layout_height="wrap_content">
                    <TextView android:textSize="16.0sp" android:textColor="@color/black"
                              android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:text="评分 " android:layout_centerVertical="true"/>
                    <ImageView android:id="@+id/charge_setting_grade_enter" android:background="@drawable/enter_icon"
                               android:layout_width="wrap_content" android:layout_height="wrap_content"
                               android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
                </RelativeLayout>
            </LinearLayout>
            <TextView android:background="#ffdadada" android:layout_width="fill_parent" android:layout_height="1.0dip"/>
            <TextView android:background="@color/common_bottom_line_background" android:layout_width="fill_parent"
                      android:layout_height="80.0dip"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>